# gitignore-tidy

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: pytest.yaml
gitignore_tidy/: __init__.py  cli.py  core.py  logging.py  random-note
tests/: cli_test.py  conftest.py  core_test.py
