[tool.poetry]
name = "gitignore-tidy"
version = "0.1.0"
description = "Tidy up your .gitignore files"
authors = ["Lorenz Walthert <lorenz.walthert@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
gitignore-tidy = "gitignore_tidy.core:app"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
